--- a/Main Project/scorer/src/main/resources/application.properties
+++ b/Main Project/scorer/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/cricscorer?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
