fixed battingStats bug

--- a/Main Project/scorer/src/main/resources/application.properties
+++ b/Main Project/scorer/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/cricscorer?createDatabaseIfNot
 spring.datasource.username=root
 spring.datasource.password=
 #spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.xjpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
